# ApologyAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.py  app.py  dashboard.html  env.example  package-lock.json  package.json  pyproject.toml  requirements.txt  start.py  test_agent.py  test_imports.py
.claude/: settings.local.json
apology_agents/: __init__.py  peace_agent.py
convex/: logs.ts  reservations.ts  schema.ts
models/: apology_context.py
tools/: flower_delivery.py  gift_finder.py  message_crafter.py  restaurant_booker.py
wei-prototype/browser-use/: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  create-tasks.md  deploy.sh  fix_deps.sh  get-tasks.md  kernel_config.yaml  monitoring.py  production_utils.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  restaurant_kernel_agent.py  script.py  test_local.py  utils.py
wei-prototype/browser-use/.claude/: settings.local.json
wei-prototype/browser-use/tests/: test_error_handling.py  test_kernel_integration.py  test_monitoring.py  test_validation.py
