[tool.poetry]
name = "apology-agent"
version = "0.1.0"
description = "Apology Agent backend/frontend dev environment"
authors = ["Chen <you@example.com>"]
# Keep simple app layout; not publishing a package

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.5"
uvicorn = {version = "0.30.6", extras = ["standard"]}
pydantic = "2.9.2"
requests = "2.32.3"
python-multipart = "0.0.9"
Jinja2 = "3.1.4"
aiofiles = "24.1.0"
httpx = "0.27.2"
python-dotenv = "1.0.1"
convex = "0.7.0"
openai = "1.45.0"

[tool.poetry.group.dev.dependencies]
# add dev-only tools here if needed (ruff, pytest, etc.)

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
